# awale_game

./: CMakeLists.txt  a.out  game.c
server/: game.c  game_logic.c  game_logic.h  message_handler.c  message_handler.h  server.c  server.h
